# agentskills-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  README_ZH.md  alembic.ini  docker-compose.yml  example.env  findings.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml  pre-commit.yml
agentskills_mcp/config/: default.yaml
agentskills_mcp/core/: __init__.py
docs/: README.md  REFACTORING_GUIDE.md  architecture.md  checklist.md  deployment.md  enterprise-skill-cloud-gap-analysis.md  enterprise-skill-cloud-plan-p0.md  enterprise-skill-cloud-plan-p1.md  enterprise-skill-cloud-plan-p2.md  enterprise-skill-cloud-plan-p3.md  enterprise-skill-cloud-requirements.md  frontend-design.md  project-spec.md  public-vs-private-deployment-matrix.md  skill-execution-properties-design.md  task_list.md  tools.md
docs/frontend-design/: frontend-design-03-api-types.md  frontend-design-04-auth-security.md  frontend-design-05-business-exception.md  frontend-design-06-basics-readonly.md  frontend-design.md
docs/plans/: 2026-03-03-auth-login-flow.md  2026-03-03-docker-compose-prod-fixes.md  2026-03-04-dashboard-metrics-persistence-design.md  2026-03-04-metrics-cleanup-api.md  2026-03-04-metrics-reset-24h-api.md  2026-03-04-register-flow-design.md  2026-03-13-refactor-app-decoupling.md  2026-03-14-fix-cascade-delete.md  2026-03-17-remove-password-login.md  2026-03-19-restrict-skill-download-permission.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
local-data/: dev.db
mcp_agentskills/: __init__.py  api_app.py  main.py
mcp_agentskills/api/: deps.py  router.py
mcp_agentskills/config/: __init__.py  default.yaml  settings.py
scripts/: checklist_stats.py
tests/: conftest.py  out.txt  run_project_http.py  run_project_sse.py  run_skill_agent.py  skill_agent.py  skill_agent_prompt.py  skill_agent_prompt.yaml  test_aihubmix.py  test_api_auth.py  test_api_dashboard.py  test_api_skill_download.py  test_api_skills.py  test_api_tokens.py  test_audit_log_api.py  test_audit_missing.py  test_auth_service.py  test_cache_policy.py  test_deprecation_features.py  test_email_sender.py  test_execution_control.py  test_load_skill_metadata_op.py  test_load_skill_op.py  test_mcp_auth.py  test_mcp_endpoints.py  test_mcp_metrics_tracking.py  test_mcp_skill_resources.py  test_mcp_tools_user_scope.py  test_metrics_cleanup_api.py  test_metrics_reset_24h_api.py  test_rbac_download_permission.py  test_reference_file_op.py  test_request_metrics.py  test_run_shell_command_op.py  test_security_jwt.py  test_security_password.py  test_security_token.py  test_settings.py  test_skill_archive_storage.py  test_skill_service.py  (+5 more)
(+136 files in other folders)
