[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agentskills"
dynamic = ["version"]
description = "An MCP server for bringing Anthropic's Agent Skills to any MCP-compatible agent."
authors = [
    { name = "jinli.yl", email = "jinli.yl@alibaba-inc.com" },
    { name = "caozouying.czy", email = "caozouying.czy@alibaba-inc.com" },
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
  "llm", "agent", "skills",
  "claude-skills", "anthropic-agent-skills",
  "mcp", "model-context-protocol", "flowllm",
  "progressive-disclosure"
]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "SQLAlchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyJWT",
    "passlib[bcrypt]",
    "python-multipart",
    "alembic",
    "httpx",
    "flowllm>=0.2.0.7",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "pipreqs"
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.2",
    "pytest_asyncio>=1.2.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0",
    "pre-commit",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "mkdocs-shadcn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_agentskills*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
mcp_agentskills = [
    "**/*.yaml",
]

[tool.setuptools.dynamic]
version = {attr = "mcp_agentskills.__version__"}

[project.urls]
Homepage = "https://github.com/zouyingcao/agentskills-mcp"
Documentation = "https://github.com/zouyingcao/agentskills-mcp/README.md"
Repository = "https://github.com/zouyingcao/agentskills-mcp"

[project.scripts]
agentskills-mcp = "mcp_agentskills.main:main"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["flowllm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.run_project_http", "tests.run_project_sse", "run_project_http", "run_project_sse"]
ignore_errors = true

